--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
       0.5px;
   background-color: #dad4d4;
   background-size: 16px 16px;
-  min-height: 100vh;
+  min-height: 107vh;
   display: flex;
   flex-direction: column;
   padding: 2rem 10rem 0 10rem;
@@ -25,4 +25,11 @@
   display: flex;
   flex-direction: column;
   padding: 2rem 10rem 0 10rem;
+}
+
+@media (max-width: 1099px) {
+  .App-header {    
+    margin-bottom: 0px;
+    
+  }
 }
