--- a/src/styles/bodys.css
+++ b/src/styles/bodys.css
@@ -38,28 +38,72 @@
 
 .buton-info {
   color: #444444;
+  font-size: 20px;
+  font-weight: 500;
+  position: relative;
+  outline-color: rgba(49, 138, 172, 0.4);
+  transition: all 1s cubic-bezier(0.19, 1, 0.22, 1);
+  overflow: hidden;
+}
+
+.buton-info:hover {
+  color: #318aac;
+  cursor: pointer;
+  box-shadow: inset 0 0 20px #c0c0c0, 0 0 20px rgba(49, 138, 172, 0.4);
+  outline-color: #444444;
+  outline-offset: 80px;
+  text-shadow: 1px 1px 6px #5c5b5b;
+}
+
+.buton-info:hover .question {
+  transition: 0.5s;
+  transform: rotate(360deg);
+  position: absolute;
+  color: #318aac;
 }
 
 .buton-lets-go {
-  background-color: #1591c4;
+  color: #fff !important;
+  font-size: 20px;
+  font-weight: 500;
+  background: #318aac;
+  position: relative;
+  border: 2px solid #318aac;
+  outline: 1px solid;
+  outline-color: rgba(49, 138, 172, 0.4);
+  transition: all 1s cubic-bezier(0.19, 1, 0.22, 1);
+  overflow: hidden;
 }
 
-.arrow {
+.buton-lets-go:hover {
   color: white;
+  cursor: pointer;
+  box-shadow: inset 0 0 20px rgba(49, 138, 172, 0.5),
+    0 0 20px rgba(49, 138, 172, 0.4);
+  outline-color: rgba(49, 138, 172, 0);
+  outline-offset: 80px;
+  text-shadow: 1px 1px 6px #fff;
+}
+
+.buton-lets-go:hover .arrow {
+  transition: all ease-in-out 0.5s;
+  position: absolute;
+  margin-left: 100px;
+  color: yellow;
 }
 
 /* ----card--- */
 
 .container-cards {
-  display: flex;
-  margin-top: 10px;
+  display: grid;
+  gap: 0px;
+  grid-template-areas: "card1 card2  card3 ";
 }
 
 .card {
   padding: 20px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
-  width: 40%;
   border-radius: 5px;
 }
 .card h3 {
@@ -82,23 +126,30 @@ img {
 /* ---body3 */
 
 .container3 {
-  display: flex;
+  display: grid;
+  gap: 10px;
+  grid-template-areas: "containerImg containerTxt2";
   background-color: white;
   border-radius: 10px;
   margin-top: 10px;
   padding: 0px 10rem;
   margin: 0px;
 }
-.containerImg{
-    padding: 15px;
+.containerImg {
+  display: block;
+  padding: 15px;
 }
 
 .containerTxt2 {
-    padding: 15px;
+  padding: 15px;
 }
 .imgColor {
   width: 13rem;
   height: 6rem;
+}
+
+.containerTxt2 p{
+    line-height: 2; 
 }
 
 .grid-container {
@@ -107,4 +158,89 @@ img {
   grid-template-areas:
     "img1 img2"
     "img3 img4";
+}
+
+.btnImg {
+  margin-top: 20px;
+  background-color: #318aac;
+  height: 3rem;
+  width: 7rem;
+  border-radius: 5px;
+  border: transparent;
+  color: white;
+  font-size: 20px;
+  transition: 0.3s;
+}
+
+.btnImg:hover {
+  cursor: pointer;
+  background-color: white;
+  color: #318aac;
+  border: solid 2px #318aac;
+  box-shadow: inset 0 0 20px rgba(49, 138, 172, 0.5),
+    0 0 20px rgba(49, 138, 172, 0.4);
+}
+
+.btnImg:hover .book{
+    transition: 0.5s;
+  transform: rotate(360deg);
+  position: absolute;
+  color: #318aac;
+}
+
+.btnImg2 {
+  background-color: #318aac;
+  height: 2.5rem;
+  width: 15rem;
+  border-radius: 5px;
+  border: transparent;
+  color: white;
+  font-size: 20px;
+  transition: 0.3s;
+  
+}
+.btnImg2:hover {
+  cursor: pointer;
+  background-color: white;
+  color: #318aac;
+  border: solid 2px #318aac;
+  box-shadow: inset 0 0 20px rgba(49, 138, 172, 0.5),
+    0 0 20px rgba(49, 138, 172, 0.4);
+}
+
+.btnImg2:hover .arrow {
+  color: #318aac;
+  transform: rotate(180deg);
+  transition: all ease-in-out 0.8s;
+  position: absolute;
+  margin-left: 170px;
+}
+
+@media (max-width: 1099px) {
+  .container-buton {
+    justify-content: center;
+  }
+
+  .container {
+    display: grid;
+  }
+  .container-cards {
+    display: grid;
+    gap: 0px;
+    grid-template-areas:
+      "card1 card2"
+      "card3 card3 ";
+  }
+  .card {
+    padding: 0;
+    margin: 5px;
+  }
+  .container3 {
+    grid-template-areas: "containerImg" "containerTxt2";
+  }
+
+  .containerImg {
+    display: grid;
+    justify-content: center;
+  }
 }
